--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -725,7 +725,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
+                                @*<div class="col-6">
                                     <div class="d-flex">
                                         <h6>TIEMPO DE ENTREGA</h6>
                                     </div>
@@ -738,7 +738,7 @@
                                         </div>
                                     </div>
 
-                                </div>
+                                </div>*@
                             </div>
                         </div>
                     </div>
